--- a/pc/meson.build
+++ b/pc/meson.build
@@ -1,7 +1,7 @@
 
 pkgconf = configuration_data()
 
-pkgconf.set('prefix', get_option('prefix'))
+pkgconf.set('prefix', dir_prefix)
 pkgconf.set('exec_prefix', '${prefix}')
 pkgconf.set('libdir', '${prefix}/@0@'.format(get_option('libdir')))
 pkgconf.set('includedir', '${prefix}/@0@'.format(get_option('includedir')))
@@ -13,7 +13,7 @@ pkgconf.set('requirement_enventor', requirement_enventor_pc)
 pkg_install_dir = '@0@/pkgconfig'.format(get_option('libdir'))
 
 configure_file(
-  input : join_paths(meson.source_root(), 'pc/enventor.pc.in'),
+  input : join_paths(meson.current_source_dir(), 'enventor.pc.in'),
   output : 'enventor.pc',
   configuration : pkgconf,
   install_dir : pkg_install_dir
