--- a/po/meson.build
+++ b/po/meson.build
@@ -3,7 +3,7 @@ if get_option('nls')
     i18n = import('i18n')
     i18n.gettext(meson.project_name(),
           args: [
-            '--directory=' + meson.source_root(),
+            '--directory=' + meson.project_source_root(),
             '--keyword=_',
             '--keyword=d_:1',
             '--keyword=P_:1,2',
